# pearlModel

./: .gitignore  .gitmodules  .pre-commit-config.yaml  Dockerfile  Pipfile  README.md  README.rst  Snakefile  conda-lock.yml  environment.yml  execution_log.txt  noxfile.py  pyproject.toml  requirements-pk.txt  requirements.txt
.devcontainer/: devcontainer.json
code/: 1_create_param_file.py  2_run_scenarios.py  2_simulate.py  2_simulate_local.py  2_simulate_original.py  2_simulate_pycharm.py  2_simulate_server.py  3_combine_hdf.py  3_combine_parquet.py  3_convert_csv_to_hdf.py  3_postprocess.py  4_run_scenarios.py  aim_2_sa_simulate.py  classic_sa_simulate.py  create_param_file.py  definitions.py  pearl.py  sa_simulate.py  simulate.py
config/: S0.yaml  S0_10.yaml  S0_1000.yaml  S0_200.yaml  S0_SA1.yaml  S0_SA1_10.yaml  S0_SA2.yaml  S0_SA3.yaml  S0_SA_10.yaml  S0_SA_1000.yaml  S0_SA_10000.yaml  S0_SA_200.yaml  S0_SA_2500.yaml  S0_msm.yaml  S1.yaml  S1_msm.yaml  S2.yaml  S2_msm.yaml  S3.yaml  S3_10.yaml  S3_1000.yaml  S3_200.yaml  S3_SA1.yaml  S3_SA1_10.yaml  S3_SA2.yaml  S3_SA3.yaml  S3_SA_10.yaml  S3_SA_1000.yaml  S3_SA_10000.yaml  S3_SA_200.yaml  S3_SA_2500.yaml  S3_msm.yaml  all.yaml  all_ehe.yaml  bmi.yaml  bmi_S0.yaml  bmi_S1.yaml  msm.yaml  noBmi.yaml  template.yaml  (+1 more)
doc/: pearl.rst
param/: parameters.h5
param_files/: age_by_h1yy.csv  age_in_2009.csv  cd4_decrease.csv  cd4_decrease_vcov.csv  cd4_increase.csv  cd4_increase_vcov.csv  cd4n_by_h1yy.csv  cd4n_by_h1yy_2009.csv  cdc_mortality.csv  cdc_mortality_idu_10x.csv  cdc_mortality_idu_1x.csv  parameters.h5  (+12 more)
(+398 files in other folders)
