[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pearl"
description = "Implementation of the PEARL HIV model"
readme = "README.md"
version = "0.0.1"
dependencies = [
    "numpy",
    "pandas",
    "scipy",
]
requires-python = ">= 3.11"

[project.optional-dependencies]
test = [
    "pytest",
    "nox",
    "pyright",
    ]
